--- a/about.html
+++ b/about.html
@@ -1,18 +1,15 @@
 <!doctype html>
 <html lang="en">
-  
 <head>
   <meta charset="UTF-8">
-  <title>AIIM</title>
+  <title>About- AIIM</title>
   <script src="js/typed.js" type="text/javascript"></script>
   <script src="js/custom.js"></script>
   <script language="JavaScript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="/css/style.css">
-  <link rel="icon" type="image/png" href="http://example.com/favicon.ico" />
-
 </head>
-<body onkeypress="start()">
+<body>
 
 <div class="menu">
 
@@ -22,25 +19,9 @@
 
   <img src = "assets/logo.png"  style = "width: 280px; padding: 10px; ">
   <div style = "text-align: center;">
-      <a href= "/about">about</a> | <a href= "/chapters">chapters</a> | latest
+    <a href= "/about">about</a> | <a href= "/chapters">chapters</a> | latest
   </div>
 
-</div>
-
-<div class = "active">
-    <div class = "header-bar">
-        <img src = "assets/boxes.png" style = "width: 65px; float: right; padding-top: 3px; padding-right: 3px;">
-    </div>
-    <div class = "text-active">
-      <p>
-      <b>&#9662 Online</b> <br>
-      <div style = "padding-left: 20px; color: rgb(25, 125, 255);">
-          <span style='color:#F1D35A'>bee</span> &#9679<br>
-          <span style='color: cyan'>fox </span> &#9679 <br>
-          <span style='color:black'>Onfim</span> &#9679 <br>
-      </div>
-      </p>
-    </div>
 </div>
 
 
@@ -48,21 +29,16 @@
   <div class="type-wrap" id = "type-wrap">
 
     <div class = "header-bar" style = "padding-top: 4px; padding-left: 7px; color: white;">
-      Chapter 1
+      About
         <img src = "assets/boxes.png" style = "width: 65px; float: right; padding-top: 3px; padding-right: 3px;">
     </div>
 
     <div class= "text-box" id = "text-box">
-        <p> Press any key to enter chat. </p>
+        AIIM is a story about robots and group chats and the end of the world. 
     </div>
-    <div class = "user-input" id = "user-input">
+    <div class = "user-input">
       <span id="typed" style="white-space:pre;"></span>
     </div>
-
-    <button class="pause">Pause</button>
-    <button class="progress">Progress</button>
-    <button class="mute">Mute</button>
-    <button class="plaintext">Read as Plaintext</button>
   </div>
 
 </div>
