--- a/about.html
+++ b/about.html
@@ -1,14 +1,19 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>About- AIIM</title>
-  <script src="js/typed.js" type="text/javascript"></script>
-  <script src="js/custom.js"></script>
+  <script src="js/custom-lite.js"></script>
   <script language="JavaScript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js" type="text/javascript"></script>  
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.min.js"></script>
+ 
   <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <link rel="icon" type="image/png" href="assets/favricon.png">
+  
 </head>
+
 <body>
 
 <div class="menu">
