--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <title>AIIM</title>
-  <script src="js/typed.js" type="text/javascript"></script>
   <script src="js/custom.js"></script>
   <script language="JavaScript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js" type="text/javascript"></script>    
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="/css/style.css">
-  <link rel="icon" type="image/png" href="http://example.com/favicon.ico" />
+  <link rel="icon" type="image/png" href="assets/favricon.png">
 
 </head>
-<body onkeypress="start()">
+<body>
 
 <div class="menu">
 
@@ -36,7 +37,7 @@
       <b>&#9662 Online</b> <br>
       <div style = "padding-left: 20px; color: rgb(25, 125, 255);">
           <span style='color:#F1D35A'>bee</span> &#9679<br>
-          <span style='color: cyan'>fox </span> &#9679 <br>
+          <span style='color: rgb(51, 167, 245)'>fox </span> &#9679 <br>
           <span style='color:black'>Onfim</span> &#9679 <br>
       </div>
       </p>
@@ -56,7 +57,6 @@
         <p> Press any key to enter chat. </p>
     </div>
     <div class = "user-input" id = "user-input">
-      <span id="typed" style="white-space:pre;"></span>
     </div>
 
     <button class="pause">Pause</button>
