added a bunch of features. doesn't work tho

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
   <img src = "assets/logo.png"  style = "width: 280px; padding: 10px; ">
   <div style = "text-align: center;">
-    <a href= "/about">about</a> | <a href= "/chapters">chapters</a> | latest
+    <a href= "/about">about</a> | <a href= "/chapters">chapters</a> | <a href= "/latest">latest</a>
   </div>
 
 </div>
@@ -40,6 +40,10 @@
 
     <div class= "text-box" id = "text-box">
         AIIM is a story about robots and group chats and the end of the world. 
+      <br><br>
+        Written (and coded) by Isabel Lee.
+      <br><br>
+        Code for AIIM is hosted on github, if you really want to know what's going on.
     </div>
     <div class = "user-input">
       <span id="typed" style="white-space:pre;"></span>
