fix secure server problem

--- a/about.html
+++ b/about.html
@@ -6,11 +6,11 @@
   <title>About- AIIM</title>
   <script src="js/custom-lite.js"></script>
   <script language="JavaScript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js" type="text/javascript"></script>  
-  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js" type="text/javascript"></script>  
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.min.js"></script>
  
   <link rel="stylesheet" type="text/css" href="/css/style.css">
-  <link rel="icon" type="image/png" href="assets/favricon.png">
+  <link rel="icon" type="image/ico" href="assets/favricon.ico">
   
 </head>
 
