--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
 <head>
   <meta charset="UTF-8">
   <title>AIIM</title>
+
   <script src="js/template.js"></script>
+  <script src="js/chapter1.js"></script>
+  
   <script language="JavaScript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js" type="text/javascript"></script>    
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.min.js"></script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122824068-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-122824068-1');
+  </script>
 
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <link rel="icon" type="image/ico" href="assets/favricon.ico">
@@ -81,13 +94,6 @@
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-11539016-1']);
   _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
 
 </body>
 </html>
