--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
   
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <title>AIIM</title>
 
-  <script src="js/template.js"></script>
   <script src="js/chapter1.js"></script>
-  
+  <script src="js/template.js"></script>
+
   <script language="JavaScript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js" type="text/javascript"></script>    
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.min.js"></script>
+
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <link rel="icon" type="image/ico" href="assets/favricon.ico">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122824068-1"></script>
@@ -21,9 +26,6 @@
 
     gtag('config', 'UA-122824068-1');
   </script>
-
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
-  <link rel="icon" type="image/ico" href="assets/favricon.ico">
 
 </head>
 <body>
@@ -36,7 +38,7 @@
 
   <img src = "assets/logo.png"  style = "width: 280px; padding: 10px;">
   <div style = "text-align: center;">
-      <a href= "/about">about</a> | <a href= "/chapters">chapters</a> | latest
+      <a href= "/about">about</a> | <a href= "/chapters">chapters</a> | <a href= "/latest">latest</a>
   </div>
 
 </div>
@@ -51,7 +53,7 @@
       <div style = "padding-left: 20px; color: rgb(25, 125, 255);">
           <span style='color:#F1D35A'>bee</span> &#9679<br>
           <span style='color: rgb(51, 167, 245)'>fox </span> &#9679 <br>
-          <span style='color:black'>Onfim</span> &#9679 <br>
+          <span style='color:#9900cc'>Onfim</span> &#9679 <br>
       </div>
       </p>
     </div>
@@ -90,10 +92,6 @@
   </div>
 
 </div>
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-11539016-1']);
-  _gaq.push(['_trackPageview']);
 
 </body>
 </html>
