finished mobile implementation

--- a/about.html
+++ b/about.html
@@ -51,9 +51,11 @@
     <div class= "text-box" id = "text-box">
         AIIM is a story about robots and group chats and the end of the world. 
       <br><br>
-        Written (and coded) by Isabel Lee.
+      You can start reading from the beginning <a href='/chapter-1'>here</a>.
       <br><br>
-        Code for AIIM is hosted on github, if you really want to know what's going on.
+        Written by Isabel Lee. New updates bi-weekly.
+      <br><br>
+        Code for AIIM is on <a href='https://github.com/isabelringing1/aiim' target='_blank'>github</a> if you're curious.
     </div>
     <div class = "user-input">
       <span id="typed" style="white-space:pre;"></span>
