--- a/about.html
+++ b/about.html
@@ -49,13 +49,15 @@
     </div>
 
     <div class= "text-box" id = "text-box">
-        AIIM is a story about robots and group chats and the end of the world. 
+      AIIM is a story about robots and group chats and the end of the world. 
       <br><br>
-      You can start reading from the beginning <a href='/chapter-1'>here</a>.
+      You can start reading from the beginning <a href='/chapter-1'>here</a>. New updates biweekly.
       <br><br>
-        Written by Isabel Lee. New updates bi-weekly.
+      Written by <a href='https://isabellee.me' target='_blank'>Isabel Lee</a>.
       <br><br>
-        Code for AIIM is on <a href='https://github.com/isabelringing1/aiim' target='_blank'>github</a> if you're curious.
+      Code for AIIM is on <a href='https://github.com/isabelringing1/aiim' target='_blank'>github</a>, if you're curious.
+      <br><br>
+      <div style = 'background-color:yellow'>AIIM is still very much still in development. If you're reading this right now, it probably means that I've asked you to be a beta reader. Please enjoy, and send feedback/bugs if you can! Also, feel free to ask for the full script, and give feedback on the story :)</div>
     </div>
     <div class = "user-input">
       <span id="typed" style="white-space:pre;"></span>
