--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
       <br><br>
       Code for AIIM is on <a href='https://github.com/isabelringing1/aiim' target='_blank'>github</a>, if you're curious.
       <br><br>
-      <div style = 'background-color:yellow'>AIIM is still very much still in development. If you're reading this right now, it probably means that I've asked you to be a beta reader. Please enjoy, and send feedback/bugs if you can! Also, feel free to ask for the full script, and give feedback on the story :)</div>
+      <div style = 'background-color:yellow'>AIIM is still very much in development. If you're reading this right now, it probably means that I've asked you to be a beta reader. Please enjoy, and send feedback/bugs if you can! Also, feel free to ask for the full script, and give feedback on the story :)</div>
     </div>
     <div class = "user-input">
       <span id="typed" style="white-space:pre;"></span>
