--- a/about.html
+++ b/about.html
@@ -55,9 +55,8 @@
       <br><br>
       Written by <a href='http://isabellee.me' target='_blank'>Isabel Lee</a>.
       <br><br>
-      Code for AIIM is on <a href='https://github.com/isabelringing1/aiim' target='_blank'>github</a>, if you're curious.
+      Code for AIIM is on <a href='https://github.com/isabelringing1/aiim' target='_blank'>github</a>, if reading my 2am code is something that sounds meaningful to you.
       <br><br>
-      <div style = 'background-color:yellow'>AIIM is still very much in development. If you're reading this right now, it probably means that I've asked you to be a beta reader. Please enjoy, and send feedback/bugs if you can! Also, feel free to ask for the full script, and give feedback on the story :)</div>
     </div>
     <div class = "user-input">
       <span id="typed" style="white-space:pre;"></span>
