--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
       <br><br>
       You can start reading from the beginning <a href='/chapter-1'>here</a>. New updates biweekly.
       <br><br>
-      Written by <a href='http://isabellee.me' target='_blank'>Isabel Lee</a>.
+      Written by Isabel Lee.
       <br><br>
       Code for AIIM is on <a href='https://github.com/isabelringing1/aiim' target='_blank'>github</a>, if reading my 2am code is something that sounds meaningful to you.
       <br><br>
