added more chapters

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
       <br><br>
       Written by Isabel Lee.
       <br><br>
-      Code for AIIM is on <a href='https://github.com/isabelringing1/aiim' target='_blank'>github</a>, if reading my 2am code is something that sounds meaningful to you.
+      Code for AIIM is on <a href='https://github.com/isabelringing1/aiim' target='_blank'>github</a>, if reading what I did at 2am is something that sounds meaningful to you.
       <br><br>
     </div>
     <div class = "user-input">
