--- a/about.html
+++ b/about.html
@@ -53,7 +53,9 @@
     <div class= "text-box" id = "text-box">
       AIIM is a story about robots and group chats and the end of the world. 
       <br><br>
-      You can start reading from the beginning <a href='/chapter-1'>here</a>. New updates biweekly.
+      You can start reading from the beginning <a href='/chapter-1'>here</a>. 
+      <br><br>
+      For updates (or to tweet at me), follow AIIM on <a href='https://twitter.com/aiim_online'>twitter</a>!
       <br><br>
       Written by Isabel Lee.
       <br><br>
