Added diary textgit add .

--- a/diary.html
+++ b/diary.html
@@ -45,20 +45,11 @@
     <body class="noisy"></body>
     <div class="emblem"><span class="icon-information"></span></div>
     <div class="frame">
-    <div class="piece output">
-        <h1>Day 1</h1>
-        <p>Today I learned there are no easy ways to kill a squirrel.</p>
-        <p>I guess I should mention I’ve never really tried before, because, you know, I’m not a BARBARIAN. But I haven’t had meat in months and I figured it wouldn’t be too hard. Obviously, you can’t approach it like the way Dad used to hunt deer- a long metal spear has no precision. Plus, even though there’s plenty of metal in this place, it would be hard to fashion something that wouldn’t immediately fall apart- too much rust.</p>
-        <p>Anyways, so instead I tried using my sling. But man, squirrels are fast- and they’re so chubby and round, I feel like even when I hit them, the rocks just sort of bounced off. The worst thing is, they didn’t even seem to care- it was really quite demoralizing. And now I’m just hungry.</p>
-        <p>This is such a bizarre way to start a diary, I know, but I needed to get it off my chest. If this is ever discovered in a thousand years by some future advanced human race, I have to ask: What must you think of me right now? Also, do you know how to kill a squirrel?</p>
-        <p>All jokes aside, I’m really impressed that this thing still works. I wasn’t sure what it was when I found it, partially because it was covered in an inch of dust and grime. I wiped it all off, and this thing just came alive- I was so surprised, I nearly dropped it. the strip near the top makes me think it’s solar powered, but who knows how much this tiny box has baked in the heat or weathered the rain? It survived, when so much else didn’t. Sort of like me.</p>
-        <p>It’s getting a little late, and I need to find something to eat. So I think I’ll sign off for now. </p>
-        <p>Till next time! Assuming this thing will turn on then.</p>
-        <p>Z</p>
-        <a href ="#">NEXT ENTRY</a> 
+    <div id="diary-container" class="piece output">
+        <div id="diary"></div>
+    </div>
     <div class="piece scanlines noclick"></div>
     <div class="piece glow noclick"></div>
-    </div>
         
 </div>
 
