refined diary page for first release.

--- a/diary.html
+++ b/diary.html
@@ -41,6 +41,15 @@
     </div>
 </div>
 
+<div class="locator">
+        <div style = "text-align: center; margin-top:30px; color: red;">
+        <img class = "compass" src = "assets/compass.gif"> <br>
+        <div id = "coordinates"> </div><br>
+        <div class="piece scanlines noclick"></div>
+        <div class="piece glow noclick"></div>
+        </div>
+</div>
+
 <div class="wrap">
     <body class="noisy"></body>
     <div class="emblem"><span class="icon-information"></span></div>
@@ -49,8 +58,7 @@
         <div id="diary"></div>
     </div>
     <div class="piece scanlines noclick"></div>
-    <div class="piece glow noclick"></div>
-        
+    <div class="piece glow noclick"></div>     
 </div>
 
 </body>
