a few other tweaks

--- a/about.html
+++ b/about.html
@@ -53,11 +53,12 @@
     <div class= "text-box" id = "text-box">
       AIIM is a story about robots and group chats and the end of the world. 
       <br><br>
-      You can start reading from the beginning <a href='/chapter-1'>here</a>. 
+      You can start reading from the beginning <a href='/chapter-1'>here</a>.
       <br><br>
-      For updates (or to tweet at me), follow AIIM on <a href='https://twitter.com/aiim_online'>twitter</a>!
+      Follow AIIM on <a href='https://twitter.com/aiim_online'>twitter</a>!
+      Part 2 is now being published periodically, so twitter will be the best place to stay on top of updates and other tidbits.
       <br><br>
-      Written by Isabel Lee.
+      AIIM is a project created, written, and designed by Isabel Lee. 
       <br><br>
       Code for AIIM is on <a href='https://github.com/isabelringing1/aiim' target='_blank'>github</a>, if reading what I did at 2am is something that sounds meaningful to you.
       <br><br>
